--- a/libpretixprint/build.gradle
+++ b/libpretixprint/build.gradle
@@ -2,11 +2,10 @@ group 'eu.pretix.pretixdesk'
 version '1.0'
 
 apply plugin: 'java-library'
-apply plugin: 'net.ltgt.apt-idea'
 apply plugin: 'jacoco'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 buildscript {
     repositories {
@@ -15,9 +14,6 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-apt-plugin:0.13"
     }
 }
 
@@ -36,11 +32,12 @@ jacocoTestReport {
 check.dependsOn jacocoTestReport
 
 dependencies {
-    compile 'com.github.librepdf:openpdf:1.0.5'
-    compile 'com.google.zxing:core:3.3.3'
+    implementation 'com.github.librepdf:openpdf:1.3.24'
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation 'commons-codec:commons-codec:1.15'
 
     // Use older org.json version to have an environment equivalent to the android platform
-    compile 'org.json:json:20090211'
+    implementation 'org.json:json:20090211'
 
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
