--- a/libpretixprint/build.gradle
+++ b/libpretixprint/build.gradle
@@ -1,35 +1,29 @@
+plugins {
+    id 'java-library'
+    id 'jacoco'
+}
+
 group 'eu.pretix.pretixdesk'
 version '1.0'
 
-apply plugin: 'java-library'
-apply plugin: 'jacoco'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(11))
     }
-}
-
-repositories {
-    mavenCentral()
-    jcenter()
 }
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
 
 check.dependsOn jacocoTestReport
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     implementation 'com.github.librepdf:openpdf:1.3.24'
