--- a/libpretixprint/build.gradle
+++ b/libpretixprint/build.gradle
@@ -1,16 +1,32 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
     id 'java-library'
     id 'jacoco'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
 group 'eu.pretix.pretixdesk'
 version '1.0'
 
+
+
+kotlin {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+    compilerOptions.jvmTarget.set(JvmTarget.JVM_11)
+    jvmToolchain {
+        languageVersion.set(JavaLanguageVersion.of(11))
+    }
+}
 java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(11))
     }
 }
+
 
 jacocoTestReport {
     reports {
@@ -34,3 +50,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 }
+
+task copyTestResources(type: Copy) {
+    from "${projectDir}/src/test/resources", "${projectDir}/src/main/resources"
+    into "${buildDir}/classes/test"
+}
+processTestResources.dependsOn copyTestResources
