--- a/libpretixprint/build.gradle
+++ b/libpretixprint/build.gradle
@@ -6,14 +6,12 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
 }
 
-group 'eu.pretix.pretixdesk'
-version '1.0'
+group = 'eu.pretix.pretixdesk'
+version = '1.0'
 
 
 
 kotlin {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
     compilerOptions.jvmTarget.set(JvmTarget.JVM_11)
     jvmToolchain {
         languageVersion.set(JavaLanguageVersion.of(11))
@@ -51,8 +49,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
-task copyTestResources(type: Copy) {
+tasks.register('copyTestResources', Copy) {
     from "${projectDir}/src/test/resources", "${projectDir}/src/main/resources"
-    into "${buildDir}/classes/test"
+    into layout.buildDirectory.dir("classes/test")
 }
 processTestResources.dependsOn copyTestResources
