--- a/libpretixprint/settings.gradle
+++ b/libpretixprint/settings.gradle
@@ -3,7 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         maven {
-            url "https://plugins.gradle.org/m2/"
+            url = "https://plugins.gradle.org/m2/"
         }
     }
 }
